deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapikuber-deployment
  labels:
    app: fastapi-kuber
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-kuber
  template:
    metadata:
      labels:
        app: fastapi-kuber
    spec:
      containers:
        - name: nfastapikuber-deployment
          image: docker.localhost.dev/fastapikuber:latest
          resources:
            requests:
              cpu: "800m"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
