expose.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapikuber-deployment-service
spec:
  type: NodePort
  selector:
    app: fastapi-kuber
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
