ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: fastapi-ingres
  rules:
  - host: fastapi.localhost.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapikuber-deployment-service
            port:
              number: 80
